# ChatMock

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURES.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_STATS.md  DOCKER.md  Dockerfile  EXPERIMENTAL_MODELS.md  PR_DESCRIPTION.md  README.md  build.py  chatmock.py  config.example.yaml  coverage.json  docker-compose.registry.yml  docker-compose.traefik.yml  docker-compose.yml  gui.py  gunicorn.conf.py  main.py  pyproject.toml  requirements-build.txt  requirements.txt  test_experimental_flag.py  test_gpt51.py  test_stats.py
.claude/: settings.local.json
.github/workflows/: build-release.yml  ci.yml  docker-image.yml  docker-publish.yml  release.yml
.mcp-debug-tools/: config.json
chatmock/: __init__.py  agentlog.py  app.py  cli.py  config.py  debug.py  fast_mode.py  http.py  limits.py  model_registry.py  models.py  oauth.py  reasoning.py  responses_api.py  responses_websocket_bridge.py  responses_websocket_sessions.py  routes_auth.py  routes_auth_utils.py  routes_ollama.py  routes_openai.py  routes_responses.py  routes_webui.py  session.py  settings.py  transform.py  upstream.py  utils.py  version.py  websocket_routes.py
docker/: entrypoint.sh
docs/: CHANGELOG.md  CREATE_PR_STEPS.md  DOCKER.md  EXPERIMENTAL_MODELS.md  GPT51_VERIFICATION.md  MANUAL_BUILD.md  PRODUCTION.md  PR_DESCRIPTION.md  README.md  RELEASE_v1.4.0.md  TRAEFIK.md  WEBUI.md  WEB_CLAUDE_INSTRUCTIONS.md
scripts/: README.md  build-and-push.sh  fix_tests_lint.py  selftest.py  show_range.py  show_with_lines.py  test_responses_cached_tokens.py  test_responses_reuse.py  update-formula-sha.sh
tests/: README.md  check_stats.py  check_webui_models.py  conftest.py  helpers.py  test_app_health.py  test_cli.py  test_cli_clamp_percent.py  test_cli_format_window_duration.py  test_cli_get_usage_color.py  test_cli_info.py  test_cli_info_account_id_none.py  test_cli_info_unknown_plan.py  test_cli_login.py  test_cli_login_client_id_missing.py  test_cli_login_keyboard_interrupt.py  test_cli_login_more.py  test_cli_login_paste.py  test_cli_login_paste_edges.py  test_cli_login_paste_errors.py  test_cli_login_paste_success_direct_worker.py  test_cli_login_persist_fail.py  test_cli_main_paths.py  test_cli_print_usage_limits_no_data.py  test_cli_print_usage_limits_no_windows.py  test_cli_print_usage_reset_branches.py  test_cli_render_progress_bar.py  test_cli_unknown_command.py  test_config_base_missing.py  test_config_client_id_env.py  test_config_fallback.py  test_config_meipass_read.py  test_config_read_candidate_empty.py  test_config_read_prompt_exceptions.py  test_contracts_basic.py  test_http_cors.py  test_http_json_error.py  test_limits_parse_functions.py  test_limits_storage.py  test_limits_store_fchmod.py  (+201 more)
